test/spec/memory.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/memory.wast
(;; STDOUT ;;;
assert_invalid error:
  third_party/testsuite/memory.wast:25:26: memory variable out of range (max 0)
(assert_invalid (module (data (i32.const 0))) "unknown memory")
                         ^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:26:26: memory variable out of range (max 0)
(assert_invalid (module (data (i32.const 0) "")) "unknown memory")
                         ^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:27:26: memory variable out of range (max 0)
(assert_invalid (module (data (i32.const 0) "x")) "unknown memory")
                         ^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:30:29: type mismatch at data segment offset. got i64, expected i32
  (module (memory 1) (data (i64.const 0)))
                            ^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:34:22: invalid data segment offset, must be a constant expression; either *.const or get_global.
  (module (memory 1) (data (i32.ctz (i32.const 0))))
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:38:22: invalid data segment offset, must be a constant expression; either *.const or get_global.
  (module (memory 1) (data (nop)))
                     ^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:42:22: initializer expression cannot reference a mutable global
  (module (memory 1) (data (get_global $g)) (global $g (mut i32) (i32.const 0)))
                     ^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:74:11: max pages (0) must be >= initial pages (1)
  (module (memory 1 0))
          ^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:78:11: initial pages (65537) must be <= (65536)
  (module (memory 65537))
          ^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:82:11: initial pages (2147483648) must be <= (65536)
  (module (memory 2147483648))
          ^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:86:11: initial pages (4294967295) must be <= (65536)
  (module (memory 4294967295))
          ^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:90:11: max pages (65537) must be <= (65536)
  (module (memory 0 65537))
          ^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:94:11: max pages (2147483648) must be <= (65536)
  (module (memory 0 2147483648))
          ^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:98:11: max pages (4294967295) must be <= (65536)
  (module (memory 0 4294967295))
          ^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:109:35: alignment must be power-of-two
  (module (memory 0) (func (drop (i64.load align=0 (i32.const 0)))))
                                  ^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:113:35: alignment must be power-of-two
  (module (memory 0) (func (drop (i64.load align=3 (i32.const 0)))))
                                  ^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:117:35: alignment must be power-of-two
  (module (memory 0) (func (drop (i64.load align=5 (i32.const 0)))))
                                  ^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:121:35: alignment must be power-of-two
  (module (memory 0) (func (drop (i64.load align=6 (i32.const 0)))))
                                  ^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:125:35: alignment must be power-of-two
  (module (memory 0) (func (drop (i64.load align=7 (i32.const 0)))))
                                  ^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:130:35: alignment must not be larger than natural alignment (8)
  (module (memory 0) (func (drop (i64.load align=16 (i32.const 0)))))
                                  ^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:134:35: alignment must not be larger than natural alignment (8)
  (module (memory 0) (func (drop (i64.load align=32 (i32.const 0)))))
                                  ^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:138:35: alignment must not be larger than natural alignment (4)
  (module (memory 0) (func (drop (i32.load align=8 (i32.const 0)))))
                                  ^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:142:35: alignment must not be larger than natural alignment (2)
  (module (memory 0) (func (drop (i32.load16_u align=4 (i32.const 0)))))
                                  ^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:146:35: alignment must not be larger than natural alignment (1)
  (module (memory 0) (func (drop (i32.load8_u align=2 (i32.const 0)))))
                                  ^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:150:29: alignment must not be larger than natural alignment (1)
  (module (memory 0) (func (i32.store8 align=2 (i32.const 0) (i32.const 0))))
                            ^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:154:29: alignment must not be larger than natural alignment (2)
  (module (memory 0) (func (i32.load16_u align=4 (i32.const 0))))
                            ^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:154:22: type stack at end of function is 1. expected 0
  (module (memory 0) (func (i32.load16_u align=4 (i32.const 0))))
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:158:29: alignment must not be larger than natural alignment (1)
  (module (memory 0) (func (i32.load8_u align=2 (i32.const 0))))
                            ^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:158:22: type stack at end of function is 1. expected 0
  (module (memory 0) (func (i32.load8_u align=2 (i32.const 0))))
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:162:29: alignment must not be larger than natural alignment (1)
  (module (memory 0) (func (i32.store8 align=2 (i32.const 0) (i32.const 0))))
                            ^^^^^^^^^^^^^^^^^^
third_party/testsuite/memory.wast:47: assert_unlinkable error:
  error: data segment is out of bounds: [0, 1) >= max value 0
  error: @0x00000017: on_data_segment_data callback failed
third_party/testsuite/memory.wast:51: assert_unlinkable error:
  error: data segment is out of bounds: [98304, 98305) >= max value 65536
  error: @0x0000001f: on_data_segment_data callback failed
third_party/testsuite/memory.wast:60: assert_unlinkable error:
  error: data segment is out of bounds: [65536, 65537) >= max value 65536
  error: @0x00000020: on_data_segment_data callback failed
30/30 tests passed.
;;; STDOUT ;;)
